# dummyhcp

./: CMakeCache.txt  CMakeLists.txt  Makefile  brief.txt  build.ninja  cmake_install.cmake  dhcp  plan.txt
include/: client.h  dhcp_packet.h  packet.h  server.h  session.h
src/: dhcp_packet.cpp  experiments.cpp  main  main.cpp  packet.cpp  server.cpp
tests/: header_tests.cpp  initialization_tests.cpp  test_main.cpp
tests/fixtures/: packet_fixtures.h
